# Calendarizador

./: .gitignore  README.md
simulador/: CMakeLists.txt
simulador/examples/actions/: ejemplo_acciones.txt  ejemplo_conflicto.txt  ejemplo_sync.txt
simulador/examples/processes/: ejemplo_conflicto.txt  ejemplo_fifo.txt  ejemplo_priority.txt  ejemplo_round_robin.txt  ejemplo_sjf.txt  ejemplo_srt.txt  ejemplo_sync.txt
simulador/examples/resources/: ejemplo_conflicto.txt  ejemplo_recursos.txt  ejemplo_sync.txt
simulador/src/: main.cpp  main_gui.cpp
simulador/src/gui/: algorithm_config_widget.cpp  algorithm_config_widget.h  control_panel_widget.cpp  control_panel_widget.h  file_loader_widget.cpp  file_loader_widget.h  gantt_chart_view.cpp  gantt_chart_view.h  gantt_chart_widget.cpp  gantt_chart_widget.h  main_window.cpp  main_window.h  metrics_panel_widget.cpp  metrics_panel_widget.h  scheduling_view.cpp  scheduling_view.h  sync_view.cpp  sync_view.h
simulador/src/models/: action.cpp  action.h  process.cpp  process.h  resource.cpp  resource.h
simulador/src/scheduling/: fifo.cpp  fifo.h  priority.cpp  priority.h  round_robin.cpp  round_robin.h  scheduler.cpp  scheduler.h  sjf.cpp  sjf.h  srt.cpp  srt.h
simulador/src/synchronization/: mutex.cpp  mutex.h  semaphore.cpp  semaphore.h  sync_mechanism.cpp  sync_mechanism.h  sync_sim.cpp  sync_sim.h
simulador/src/utils/: file_loader.cpp  file_loader.h  metrics.cpp  metrics.h
